video issues fixed,ptoduct animation smoothened

--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -548,7 +548,7 @@ th {
   .list {
     gap: 5vw;
     overflow-x: visible;
-    padding-inline: 0;
+    padding-inline: 1em;
   }
   .list .listItem img,
   .list .listItem2 img {
