--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -611,7 +611,7 @@ th {
   .list {
     gap: 5vw;
     overflow-x: visible;
-    padding-inline: 0;
+    padding-inline: 1em;
 
     .listItem img,
     .listItem2 img {
