map change, translation, who page overflow, slider-scroll interference fixed

--- a/src/Style/Blog.css
+++ b/src/Style/Blog.css
@@ -442,6 +442,7 @@
 .blogswiper .swiperNoswiping .motionDiv {
   gap: 2rem;
   width: calc(100vw - 4rem);
+  align-items: stretch;
 }
 .blogswiper .blog-item {
   width: 33.3333333333vw;
