--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -154,7 +154,7 @@
 .videoSec {
   padding-top: 15vh;
   // padding-bottom: 30vh;
-  height: 150vh;
+  // height: 150vh;
   text-align: -webkit-center;
   text-align: center;
   position: relative;
