--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -198,7 +198,6 @@
   top: 50%;
   translate: 0 calc(-50% + 25px);
   padding-inline: 10%;
-  touch-action: pan-x;
 }
 .list .listItem2 {
   height: auto;
@@ -521,6 +520,19 @@ th {
   }
   .blogswiper .blog-item {
     width: 100vw !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: space-between !important;
+    gap: 10px;
+  }
+  .blogswiper .blog-item .blogswipe-info {
+    gap: 1rem;
+    height: 100%;
+    justify-content: space-between;
+  }
+  .blogswiper .swiperNoswiping .motionDiv {
+    gap: 4rem !important;
+    width: calc(100vw - 5rem) !important;
   }
   .swiperNoswiping {
     min-height: 500px;
@@ -534,10 +546,12 @@ th {
   .swiperNoswiping:has(.var2) .dots {
     display: flex;
   }
-  .imgWrap, .imgWrap2 {
+  .imgWrap,
+  .imgWrap2 {
     padding: 0;
   }
-  .imgWrap img, .imgWrap2 img {
+  .imgWrap img,
+  .imgWrap2 img {
     -o-object-fit: scale-down;
        object-fit: scale-down;
     -webkit-user-drag: none;
@@ -787,6 +801,9 @@ th {
     padding-inline: 10%;
     align-items: start;
     grid-gap: 20%;
+  }
+  .prodHero .pFeature li::before {
+    left: -1.45em;
   }
   .prodHero .pFeature h3 {
     font-size: clamp(3.5rem, 10vw, 4.3rem) !important;
