--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -234,7 +234,6 @@
   top: 50%;
   translate: 0 calc(-50% + 25px);
   padding-inline: 10%;
-  touch-action: pan-x;
 
   .listItem2 {
     height: auto;
@@ -253,8 +252,7 @@
     }
     h5 {
       background: transparent !important;
-    text-transform: none;
-
+      text-transform: none;
     }
   }
   .listItem {
@@ -439,7 +437,6 @@
   scroll-snap-align: none !important;
   transition: all 0.5s ease;
 
-
   h3 {
     text-transform: uppercase;
   }
@@ -582,8 +579,21 @@ th {
   }
   .blogswiper .blog-item {
     width: 100vw !important;
-  }
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: space-between !important;
+    gap: 10px;
 
+    .blogswipe-info {
+      gap: 1rem;
+      height: 100%;
+      justify-content: space-between;
+    }
+  }
+  .blogswiper .swiperNoswiping .motionDiv {
+    gap: 4rem !important;
+    width: calc(100vw - 5rem) !important;
+  }
   .swiperNoswiping {
     min-height: 500px;
     .dots {
@@ -597,14 +607,15 @@ th {
       // bottom: -100px;
     }
   }
-.imgWrap, .imgWrap2{
-  padding: 0;
+  .imgWrap,
+  .imgWrap2 {
+    padding: 0;
 
-  img{
-    object-fit: scale-down;  
-    -webkit-user-drag: none;
+    img {
+      object-fit: scale-down;
+      -webkit-user-drag: none;
+    }
   }
-}
   .var2 .listItem h4 {
     line-break: anywhere;
   }
@@ -732,12 +743,12 @@ th {
     gap: 10vh;
     padding-inline: clamp(5%, 5vw, 10%);
     h1 {
-      font-size: clamp(4.44rem, 10vw, 7rem);   
+      font-size: clamp(4.44rem, 10vw, 7rem);
     }
     h2 {
       font-size: clamp(3.5rem, 10vw, 4.6rem);
     }
-    .prodHead h1 img{
+    .prodHead h1 img {
       height: clamp(4.44rem, 10vw, 7rem) !important;
     }
   }
@@ -858,9 +869,14 @@ th {
       grid-gap: 20%;
     }
   }
-  .prodHero .pFeature h3 {
-    font-size: clamp(3.5rem, 10vw, 4.3rem) !important;
-    bottom: -35%;
+  .prodHero .pFeature {
+    li::before{
+      left: calc(-1em - 0.45em);
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 4.3rem) !important;
+      bottom: -35%;
+    }
   }
   .nav__cta .arrow {
     width: 30px;
@@ -927,7 +943,7 @@ th {
     h2 {
       font-size: clamp(3.5rem, 10vw, 6.6rem);
     }
-    .prodHead h1 img{
+    .prodHead h1 img {
       height: clamp(5.44rem, 10vw, 8.25rem) !important;
     }
   }
