--- a/src/Style/Contact/contact.css
+++ b/src/Style/Contact/contact.css
@@ -12,14 +12,28 @@
 }
 
 .cont-map {
+  position: relative;
   width: 100%;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: -webkit-fill-available;
+  height: 100%;
   border-radius: 25px;
   overflow: hidden;
 }
-.cont-map div div {
-  height: 700px;
+.cont-map iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.cont-map small {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  translate: -50% 0;
+  text-align: center;
+  text-transform: uppercase;
+  border: 1px solid var(--accent);
+  border-radius: 50px;
+  padding: 1em;
 }
 
 .cont-form {
@@ -175,10 +189,8 @@
   .cont-map {
     order: 1;
     width: 90%;
+    min-height: 50vh;
     justify-self: center;
-  }
-  .cont-map div div {
-    height: 500px;
   }
   .cont-detail ul {
     row-gap: 30px;
