--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -79,6 +79,7 @@
   top: 10px;
   left: calc(-1em - 5px);
   transition: bottom 0.5s ease;
+  translate: 50% 0;
 }
 .pFeature li.animate::before {
   animation: xtend 0.5s forwards; /* Trigger animation */
@@ -95,7 +96,7 @@
     bottom: 45px;
   }
   100% {
-    bottom: -24px;
+    bottom: -25px;
   }
 }
 .pModel {
@@ -174,7 +175,6 @@
   width: 100%;
   background-color: white;
   border-radius: 15px;
-  touch-action: pan-x;
 }
 .pTable .table td {
   filter: invert(1) hue-rotate(180deg);
@@ -315,7 +315,7 @@
   background-color: transparent;
 }
 .pCont .choice select option {
-  background: var(--bg-color) !important;
+  background: var(--bg-color);
 }
 .pCont .choice select:focus, .pCont .choice select:focus-within {
   border: none;
