--- a/src/Style/who.css
+++ b/src/Style/who.css
@@ -181,7 +181,7 @@
 .surpass img {
     max-width: 100%;
     border-radius: 20px;
-    max-height: 500px;
+    /* max-height: 500px; */
 }
 
 .surpass p {
@@ -306,7 +306,7 @@
     }
 
     .surpass {
-        max-height: 70vh;
+        /* max-height: 70vh; */
         min-height: unset;
     }
 
