--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -76,8 +76,8 @@
   width: 2px;
   content: "";
   position: absolute;
-  top: 10px;
-  left: calc(-1em - 5px);
+  top: 0.45rem;
+  left: -1.05rem;
   transition: bottom 0.5s ease;
   translate: 50% 0;
 }
@@ -89,14 +89,14 @@
 }
 .pFeature li::marker {
   color: var(--accent);
-  font-size: 26px;
+  font-size: 1.25rem;
 }
 @keyframes xtend {
   0% {
-    bottom: 45px;
+    bottom: 100%;
   }
   100% {
-    bottom: -25px;
+    bottom: var(--xtendBottom);
   }
 }
 .pModel {
@@ -514,10 +514,6 @@
   }
 }
 @media (max-width: 500px) {
-  .pFeature li::before {
-    top: 5px;
-    left: -1.5em;
-  }
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
