--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -83,8 +83,8 @@
       width: 2px;
       content: "";
       position: absolute;
-      top: 10px;
-      left: Calc(-1em - 5px);
+      top: 0.45rem;
+      left: -1.05rem;
       transition: bottom 0.5s ease;
       translate: 50% 0;
     }
@@ -101,24 +101,24 @@
 
     &::marker {
       color: var(--accent);
-      font-size: 26px;
+      font-size: 1.25rem;
     }
   }
 }
 @-webkit-keyframes xtend {
   0% {
-    bottom: 45px;
+    bottom: 100%;
   }
   100% {
-    bottom: -25px;
+    bottom: var(--xtendBottom);
   }
 }
 @keyframes xtend {
   0% {
-    bottom: 45px;
+    bottom: 100%;
   }
   100% {
-    bottom: -25px;
+    bottom: var(--xtendBottom);
   }
 }
 
@@ -679,14 +679,14 @@
   }
 }
 @media (max-width: 500px) {
-.pFeature{
-  li{
-    &::before {
-      top: 5px;
-      left: Calc(-1em - 0.5em);
-    }
-  }
-}
+// .pFeature{
+//   li{
+//     &::before {
+//       // top: 5px;
+//       // left: Calc(-1em - 0.5em);
+//     }
+//   }
+// }
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
