--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -418,6 +418,10 @@ th:first-child {
   text-align: left;
 }
 
+.pTable tr td:not(:first-of-type) {
+  filter: brightness(0) saturate(100%) invert(16%) sepia(46%) saturate(5167%) hue-rotate(319deg) brightness(91%) contrast(94%);
+}
+
 th,
 td {
   padding: 12px;
