list marker size fix

--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -847,7 +847,7 @@ th {
   .wipe img {
     width: 94vw;
   }
-  .pInfo img {
+  .pInfo .pInfoImg {
     -o-object-fit: contain !important;
     object-fit: contain !important;
   }
