--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -98,7 +98,6 @@
         display: none;
       }
       .wipe {
-        transform: translate(100%, 0%);
         img {
           height: 8px;
         }
@@ -134,9 +133,10 @@
 
       transition: --wipe-position 0.5s linear;
       position: absolute;
+      translate: 0;
       top: 0%;
-      left: 0;
-      transform: translate(100%, calc(0% + 0.25em));
+      left: -2rem;
+      transform: translate(0, calc(0% + 0.25em));
       width: 0.5rem;
       height: 100%;
       text-align: center;
@@ -154,22 +154,22 @@
     }
   }
 }
-@-webkit-keyframes xtend {
-  0% {
-    bottom: 100%;
-  }
-  100% {
-    bottom: var(--xtendBottom);
-  }
-}
-@keyframes xtend {
-  0% {
-    bottom: 100%;
-  }
-  100% {
-    bottom: var(--xtendBottom);
-  }
-}
+// @-webkit-keyframes xtend {
+//   0% {
+//     bottom: 100%;
+//   }
+//   100% {
+//     bottom: var(--xtendBottom);
+//   }
+// }
+// @keyframes xtend {
+//   0% {
+//     bottom: 100%;
+//   }
+//   100% {
+//     bottom: var(--xtendBottom);
+//   }
+// }
 
 .pModel {
   height: 130vh;
@@ -663,7 +663,7 @@
       // line-break: anywhere;
     }
     .pInfo {
-      img {
+      .pInfoImg {
         max-width: 100%;
         -o-object-fit: unset;
         object-fit: unset;
@@ -693,6 +693,9 @@
       padding-left: 30px;
       min-height: unset;
     }
+  }
+  .pFeature li .wipe{
+    left: -1.5rem;
   }
   .pModel {
     height: unset;
