--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -782,7 +782,7 @@ th {
   .wipe img {
     width: 94vw;
   }
-  .pInfo img {
+  .pInfo .pInfoImg {
     -o-object-fit: contain !important;
     object-fit: contain !important;
   }
