--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -98,6 +98,7 @@
         display: none;
       }
       .wipe {
+        transform: translate(0, 0%);
         img {
           height: 8px;
         }
