--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -71,6 +71,7 @@
   ul {
     max-width: 400px;
     min-height: 30vh;
+    overflow: hidden;
   }
 
   li {
@@ -143,6 +144,7 @@
       text-align: center;
       text-align: -webkit-center;
       z-index: 2;
+      overflow: hidden;
 
       img {
         width: 100%;
