--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -66,6 +66,7 @@
 .pFeature ul {
   max-width: 400px;
   min-height: 30vh;
+  overflow: hidden;
 }
 .pFeature li {
   list-style: none;
@@ -103,6 +104,7 @@
   text-align: center;
   text-align: -webkit-center;
   z-index: 2;
+  overflow: hidden;
 }
 .pFeature li .wipe img {
   width: 100%;
