--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -392,7 +392,7 @@
   &::before {
     content: "";
     width: 100%;
-    height: 100%;
+    height: max(100vh, 100%);
     position: fixed;
     inset: 0;
     background: url(/bg.webp);
@@ -403,7 +403,7 @@
   &::after {
     content: "";
     width: 100%;
-    height: 100%;
+    height: max(100vh, 100%);
     position: fixed;
     inset: 0;
     // background-color: rgba(0, 0, 0, 0.9098039216);
