--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -443,6 +443,32 @@ th {
   font-weight: bold;
 }
 
+.product .swiperNoswiping .arrow-ctrl {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 1rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.product .swiperNoswiping .prev-arrow,
+.product .swiperNoswiping .next-arrow {
+  width: 40px;
+  height: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+  border: 2px solid white;
+  padding: 0;
+  font-size: 18px;
+  cursor: pointer;
+}
+.product .swiperNoswiping .prev-arrow:hover,
+.product .swiperNoswiping .next-arrow:hover {
+  scale: 1.1;
+}
+
 .swiperNoswiping {
   display: flex;
   flex-direction: column;
