--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -490,7 +490,32 @@ th {
   padding-block: 2em;
   font-weight: bold;
 }
-
+.product .swiperNoswiping{
+  .arrow-ctrl {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 1rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  .prev-arrow,
+  .next-arrow {
+    width: 40px;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    border: 2px solid white;
+    padding: 0;
+    font-size: 18px;
+    cursor: pointer;
+    &:hover{
+        scale: 1.1;
+    }
+  }
+}
 // Swiperrrr no swiping
 .swiperNoswiping {
   display: flex;
@@ -522,7 +547,6 @@ th {
   .chevleft {
     transform: rotate(180deg);
   }
-
   .dots {
     display: none;
     position: absolute;
