--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -210,7 +210,7 @@
   transition: --wipe-position 4250ms linear;
 
   width: 98vw;
-  translate: -2vw;
+  Transform: Translate(-2vw);
   text-align: center;
   text-align: -webkit-center;
   z-index: -1;
@@ -232,7 +232,7 @@
   align-items: stretch;
   gap: 2vw;
   top: 50%;
-  translate: 0 calc(-50% + 25px);
+  Transform: Translate(0 calc(-50% + 25px));
   padding-inline: 10%;
 
   .listItem2 {
@@ -299,7 +299,7 @@
         position: absolute;
         top: calc(50% - 40px);
         left: 50%;
-        translate: -50% 0;
+        Transform: Translate(-50% 0);
         scale: 0;
         -webkit-user-drag: none;
         transition: all 0.5s ease;
@@ -597,7 +597,7 @@ th {
   }
   .wipe {
     width: auto;
-    translate: -10px 0;
+    Transform: Translate(-10px 0);
     img {
       width: calc(200vw - 1vw);
       margin: auto;
@@ -935,7 +935,7 @@ th {
   }
   .wipe {
     width: 95vw;
-    translate: -5vw;
+    Transform: Translate(-5vw);
     img {
       width: 90vw;
     }
