--- a/src/Style/Contact/contact.css
+++ b/src/Style/Contact/contact.css
@@ -28,7 +28,7 @@
   position: absolute;
   bottom: 5%;
   left: 50%;
-  translate: -50% 0;
+  Transform: Translate(-50% 0);
   text-align: center;
   text-transform: uppercase;
   border: 1px solid var(--accent);
