--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -82,7 +82,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  translate: 0 -20vh;
+  transform: translate(0 -20vh);
   line-height: 1;
   flex-wrap: wrap;
   filter: invert(1);
