--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -88,7 +88,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    translate: 0 -20vh;
+    transform: translate( 0 -20vh);
     line-height: 1;
     flex-wrap: wrap;
     -webkit-filter: invert(1);
