--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -25,7 +25,7 @@ small{
   position: absolute;
   bottom: 5%;
   left: 50%;
-  Transform: Translate(-50% 0);
+  translate: -50% 0;
   text-align: center;
   text-transform: uppercase;
   border: 1px solid var(--accent);
@@ -43,7 +43,9 @@ small{
     font-size: clamp(2.35rem, 10vw, 5.5rem);
     // line-break: anywhere;
     word-break: break-word;
-    hyphens: auto;
+    -webkit-hyphens: auto;
+        -ms-hyphens: auto;
+            hyphens: auto;
     overflow-wrap: anywhere;
   }
 }
@@ -217,7 +219,8 @@ small{
     row-gap: 30px;
     align-items: baseline;
     flex-wrap: wrap;
-    column-gap: 30px;
+    -moz-column-gap: 30px;
+         column-gap: 30px;
     flex-direction: row;
     justify-content: center;
     margin-block: 5vh;
@@ -254,7 +257,8 @@ small{
     text-align: center;
     align-items: baseline;
     flex-wrap: wrap;
-    column-gap: 50px;
+    -moz-column-gap: 50px;
+         column-gap: 50px;
     flex-direction: row;
     justify-content: center;
   }
