--- a/src/Style/Blog.scss
+++ b/src/Style/Blog.scss
@@ -143,7 +143,7 @@
     color: var(--accent);
     text-decoration: underline;
     &:hover {
-      Transform: Translate(5px 0);
+      translate: 5px 0;
     }
   }
 }
