--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -210,7 +210,7 @@
   transition: --wipe-position 4250ms linear;
 
   width: 98vw;
-  Transform: Translate(-2vw);
+  translate: -2vw;
   text-align: center;
   text-align: -webkit-center;
   z-index: -1;
@@ -232,7 +232,7 @@
   align-items: stretch;
   gap: 2vw;
   top: 50%;
-  Transform: Translate(0 calc(-50% + 25px));
+  translate: 0 calc(-50% + 25px);
   padding-inline: 10%;
 
   .listItem2 {
@@ -299,7 +299,7 @@
         position: absolute;
         top: calc(50% - 40px);
         left: 50%;
-        Transform: Translate(-50% 0);
+        translate: -50% 0;
         scale: 0;
         -webkit-user-drag: none;
         transition: all 0.5s ease;
@@ -470,7 +470,8 @@ th:first-child {
   text-align: left;
 }
 .pTable tr td:not(:first-of-type){
-  filter: brightness(0) saturate(100%) invert(16%) sepia(46%) saturate(5167%) hue-rotate(319deg) brightness(91%) contrast(94%);
+  -webkit-filter: brightness(0) saturate(100%) invert(16%) sepia(46%) saturate(5167%) hue-rotate(319deg) brightness(91%) contrast(94%);
+          filter: brightness(0) saturate(100%) invert(16%) sepia(46%) saturate(5167%) hue-rotate(319deg) brightness(91%) contrast(94%);
 }
 th,
 td {
@@ -597,7 +598,7 @@ th {
   }
   .wipe {
     width: auto;
-    Transform: Translate(-10px 0);
+    translate: -10px 0;
     img {
       width: calc(200vw - 1vw);
       margin: auto;
@@ -639,7 +640,8 @@ th {
     padding: 0;
 
     img {
-      object-fit: scale-down;
+      -o-object-fit: scale-down;
+         object-fit: scale-down;
       -webkit-user-drag: none;
     }
   }
@@ -935,7 +937,7 @@ th {
   }
   .wipe {
     width: 95vw;
-    Transform: Translate(-5vw);
+    translate: -5vw;
     img {
       width: 90vw;
     }
