--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -162,7 +162,7 @@
         }
 
         svg {
-            Transform: Translate(0 1px);
+            translate: 0 1px;
         }
     }
 }
@@ -181,7 +181,7 @@
         width: 15px;
         margin-left: 5px;
         vertical-align: middle;
-        transition: transform 0.2s ease;
+        transition: translate 0.2s ease;
     }
 
 }
