--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -82,7 +82,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  transform: translate(0 -20vh);
+  translate: 0 -20vh;
   line-height: 1;
   flex-wrap: wrap;
   filter: invert(1);
@@ -168,8 +168,8 @@
   height: auto;
   pointer-events: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
   -webkit-user-drag: none;
   z-index: 2;
   cursor: pointer;
