--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -88,7 +88,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    transform: translate( 0 -20vh);
+    translate: 0 -20vh;
     line-height: 1;
     flex-wrap: wrap;
     -webkit-filter: invert(1);
@@ -185,7 +185,10 @@
     width: 100%;
     height: auto;
     pointer-events: none;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     -webkit-user-drag: none;
     z-index: 2;
     cursor: pointer;
